# explore-tech

./: README.md  index.html
0-nuxtjs-nestjs-todolist/: README-API.md  README.md  curl-commands.txt  deploy-k8s.sh  docker-compose.yml  insert-sample-todos.sh  start-services.sh
0-nuxtjs-nestjs-todolist/backend/: .dockerignore  Dockerfile  package-lock.json  package.json
0-nuxtjs-nestjs-todolist/frontend/: .dockerignore  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
0-nuxtjs-nestjs-todolist/k8s/: backend.yaml  frontend.yaml  (+2 more)
1-python-web/: README.md  app.py  models.py
2-rust-todolist/: .gitignore  Cargo.toml  README.md  run.sh
2-rust-todolist/src/: database.rs  handlers.rs  main.rs  models.rs
2-rust-todolist/static/css/: style.css
2-rust-todolist/templates/: edit.html  index.html
3-go-todo-api/: .gitignore  README.md  frontend.go  go.mod  main.go  run-all.sh  run-backend.sh  run-both.sh  run-frontend.sh
3-python-todo-api/: .gitignore  README.md  index.html  main.py  rencana.md  run-all.sh  run-backend.sh  run-frontend.sh
4-.net-html/: Program.cs  README.md  TodoList.csproj  index.html  run-backend.sh  run-frontend.sh  todos.db
5-tensorflowjs-html/: .gitignore  README.md  index.html  nginx.conf  open-browser.sh  run-all.sh  run-nginx.sh
6-bert-summary/: ORIGINAL_BERTSUM_README.md  original_bertsum_app.py  run_original_bertsum.sh  simple_bertsum_app.py
7-java-html-todo-api/: README.md  index.html  pom.xml  run-both.sh  run-frontend.sh  run.sh  test-api.sh  todos.db
9-wasm/: game.go  game.html  game.wasm
vps/: user.txt
(+30 files in other folders)
